--- a/src/styles/scss/footer.scss
+++ b/src/styles/scss/footer.scss
@@ -1,15 +1,20 @@
 .site-footer-wrapper {
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
 	padding-top: 0;
 
 	.site-logo-image {
-		max-width: 350px;
+		max-width: 326px;
 	}
 }
-
+.site-footer-bg-container {
+	background-color: rgba(51,51,51,.95);
+}
 .site-footer__newsletter {
 	background-color: $red;
 	font-size: 16px;
-	padding: 45px 30px 60px;
+	padding: 65px 30px 65px;
 
 
 }
@@ -22,13 +27,22 @@
 		font-size: 30px;
 		font-weight: 700;
 		margin-top: 0;
+		margin-bottom: 0;
+	}
+
+	p {
+		font-size: 20px;
+		margin-bottom: 38px;
+		margin-top: 5px;
 	}
 
 	.button-primary {
 		background-color: #000;
 		border: 0 solid;
+		font-size: 15px;
 		opacity: 1;
 		transition: background-color .3s;
+    	height: 53px;
 
 		&:hover {
 			background-color: #000;
@@ -41,7 +55,7 @@
 		max-width: none;
 
 		input {
-			border: 0 solid;
+			border: 2px solid $grey-light;
 		}
 	}
 	.newsletter-submit {
@@ -52,7 +66,7 @@
 .site-footer-logo {
     display: flex;
     justify-content: center;
-    padding: 60px;
+    padding: 70px 30px 60px;
 }
 
 .site-footer-information {
@@ -60,6 +74,10 @@
 	display: flex;
 	padding: 15px;
 	justify-content: center;
+
+	@media screen and ( min-width: 1023px  ) {
+		margin-top: 54px;
+	}
 
 	.container {
 		// max-width: 1400px;
@@ -85,11 +103,19 @@
 			.payment-icons {
 				display: flex;
 				justify-content: center;
+
+				@media screen and ( max-width: 1023px ) {
+					justify-content: flex-start;
+				}
 			}
 		}
 		&.column3 {
 			display: flex;
 			justify-content: flex-end;
+		}
+
+		@media screen and ( max-width: 1023px ) {
+			width: 100%;
 		}
 	}
 	.site-footer-credits {
@@ -122,7 +148,113 @@
 		}
 	}
 	hr {
+		border-width: 1px 0 0;
 		margin: 45px 0;
-		opacity: .3;
+    	opacity: .2;
+
+    	@media screen and ( max-width: 1023px ) {
+    		margin-bottom: 45px;
+    	}
+	}
+}
+
+.site-footer-helplinks__column {
+	&.col3 {
+		width: 33%;
+
+		@media screen and ( max-width: 1023px ) {
+			width: 100%;
+		}
+	}
+
+	
+}
+
+.site-footer-helplink {
+	align-items: center;
+	display: flex;
+	font-size: 20px;
+	font-weight: 600;
+
+	svg {
+		height: 18px;
+		margin-right: 15px;
+	}
+
+	@media screen and ( max-width: 1023px  ) {
+		margin-bottom: 10px;
+		margin-top: 10px;
+	}
+	@media screen and ( min-width: 1024px  ) {
+		justify-content: center;
+	}
+}
+
+.site-footer-block-content {
+    font-size: 13px;
+
+    p {
+    	&:first-child {
+    		margin-top: 0;
+    	}
+    }
+
+    .site-footer-block-button {
+		// margin-bottom: 15px;
+
+		// @media screen and ( min-width: 1024px  ) {
+		// 	margin-bottom: 0;
+		// }
+    }
+}
+
+.site-footer-block-rich-text {
+	.social-icons {
+		margin-top: 15px;	
+	}
+	.social-link {
+		svg {
+			background-color: #cbcbcd;	
+			color: $grey-dark;	
+		}
+	}
+	.faststarters-logo {
+		display: block;
+		margin-bottom: 15px;
+		margin-top: 15px;
+
+		@media screen and ( min-width: 1024px  ) {
+			margin-bottom: 0;
+		}
+	}
+}
+
+.site-footer-block-title {
+	display: flex;
+	align-items: center;
+	font-weight: 400;
+
+	svg {
+		margin-right: 10px;
+		width: 20px;
+	}
+}
+
+.site-footer-block-item {
+	flex: 3;
+
+	&:last-child {
+		@media screen and ( min-width: 1024px ) and ( max-width: 1200px ) {
+			flex: 4;
+		}
+
+		@media screen and ( max-width: 1023px  ) {
+			border-bottom: 0 solid;
+		}
+	}
+}
+.site-footer-block-menu {
+	@media screen and ( min-width: 1020px ) {
+		flex: 2;
 	}
 }
