--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -15539,3 +15539,4 @@ $local-thumbnail-space: 3px;
 @import 'scss/footer.scss';
 @import 'scss/product.scss';
 @import 'scss/homepage.scss';
+@import 'scss/collections.scss';
