--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -15539,4 +15539,7 @@ $local-thumbnail-space: 3px;
 @import 'scss/footer.scss';
 @import 'scss/product.scss';
 @import 'scss/homepage.scss';
+@import 'scss/hero.scss';
+@import 'scss/subpage-sections.scss';
+@import 'scss/s4com.scss';
 @import 'scss/collections.scss';
