--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -15544,3 +15544,4 @@ $local-thumbnail-space: 3px;
 @import 'scss/s4com.scss';
 @import 'scss/wholesale.scss';
 @import 'scss/collections.scss';
+@import 'scss/about.scss';
