--- a/src/styles/scss/subpage-sections.scss
+++ b/src/styles/scss/subpage-sections.scss
@@ -33,5 +33,9 @@
 	.home-section--title {
 		font-size: 50px !important;
 		font-weight: 600 !important;
+
+		@media screen and ( max-width: 767px ) {
+			font-size: 35px !important;
+		}
 	}
 }
