Fix signup mobile

--- a/src/styles/scss/footer.scss
+++ b/src/styles/scss/footer.scss
@@ -60,6 +60,15 @@
 	}
 	.newsletter-submit {
 		width: auto;
+
+		@media screen and ( max-width: 767px  ) {
+			margin: 10px 0 0;
+			width: calc(67% - 10px);
+
+			button {
+				width: 100%;
+			}
+		}
 	}
 }
 
